fixed issue with sidemenu not covering whole screen on mobile

--- a/src/css/HamburgerMenu.css
+++ b/src/css/HamburgerMenu.css
@@ -41,7 +41,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 20%;
   background: #838383;
   z-index: 1000;
